--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="app">
-        <h1>Code Analyzer</h1>
+        <h1>ai chatbot</h1>
         <button id="analyze-btn">Analyze Code</button>
         <pre id="suggestions"></pre>
     </div>
